--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,13 @@
 services:
   db:
+    build: ./db
     image: ttappostgres
     container_name: tta_db
     volumes:
-      - TaskTableMTAB:/var/lib/postgresql/data
+      - /var/lib/postgresql/data
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: tasktablemtab
     ports:
       - "5433:5432"
-volumes:
-  TaskTableMTAB:
