--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 spring:
+  profiles.active: dev
   application.name: TaskTableApp
   datasource:
     #url: jdbc:postgresql://db:5432/tasktablemtab <- taki adres żeby działał w kontenerze
